--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -42,6 +42,7 @@ template {
 a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
+  color: #338099;
 }
 a:active,
 a:hover {
