--- a/weather-dashboard/src/styles/searchWeather.css
+++ b/weather-dashboard/src/styles/searchWeather.css
@@ -1,17 +1,18 @@
 button {
-    height: 50px;
-    width: 75px;
-    background-color: #6375BC;
-    color: white;
-    font-weight: 900;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  height: 50px;
+  width: 75px;
+  background-color: #6375bc;
+  color: white;
+  font-weight: 900;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-.weatherJSON{
-    display: flex;
-    flex-direction: column;
+.weatherJSON {
+  display: flex;
+  flex-direction: column;
 }
 
 .weather-display {
-    color: #706F70;
+  color: #706f70;
 }
