--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -157,6 +157,7 @@ select {
 button,
 html [type="button"] {
   -webkit-appearance: button;
+  appearance: button;
 }
 
 [type="button"]::-moz-focus-inner,
@@ -206,6 +207,7 @@ textarea {
 
 [type="search"] {
   -webkit-appearance: textfield;
+  appearance: textfield;
   outline-offset: -2px;
 }
 
